// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize log options 1`] = `
Array [
  true,
  true,
  true,
  true,
  true,
  true,
]
`;

exports[`normalize log options 2`] = `
Array [
  true,
  true,
  true,
  true,
]
`;

exports[`normalize log options 3`] = `Array []`;

exports[`normalize log options 4`] = `
Array [
  true,
  false,
  undefined,
  true,
  undefined,
  undefined,
]
`;

exports[`normalize strict options 1`] = `
Array [
  true,
  true,
]
`;

exports[`normalize strict options 2`] = `
Array [
  false,
  false,
]
`;

exports[`normalize strict options 3`] = `
Array [
  false,
  false,
]
`;

exports[`normalize strict options 4`] = `
Array [
  false,
  true,
]
`;

exports[`normalize strict options 5`] = `
Array [
  true,
  false,
]
`;

exports[`normalize strict options 6`] = `
Array [
  true,
  true,
]
`;

exports[`normalize strict options 7`] = `
Array [
  false,
  undefined,
]
`;

exports[`normalize strict options 8`] = `
Array [
  true,
  undefined,
]
`;

exports[`normalize strict options 9`] = `
Array [
  undefined,
  false,
]
`;

exports[`normalize strict options 10`] = `
Array [
  undefined,
  true,
]
`;
